# voting_machine

./: .gitignore  Cargo.toml  admin_manual.txt  ballot.csv  db.csv  installation_manual.txt  voter_db.csv  voter_manual.txt
ballot/: judge.csv  metadata.json  president.csv  senate.csv
ballot/votes/: aacd3f57-f767-482d-b60c-cddb81c4142d.vote
ballots/test/: candidates.csv  judge.csv  metadata.json  president.csv  senate.csv
new_ballot/: candidates.csv
src/: admin.rs  dbg.rs  main copy.rs  main.rs  utils.rs  voter.rs  voting.rs
test/: candidates.csv
