[package]
name = "voting_machine"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chrono = "0.4.38"
clearscreen = "3.0.0"
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
